syntax = "proto3";

package files.v1;

option go_package = "github.com/bd878/gallery/server/api";

service Files {
	rpc ReadFile(ReadFileRequest) returns (File) {}
	rpc ReadBatchFiles(ReadBatchFilesRequest) returns (ReadBatchFilesResponse) {}
	rpc SaveFileStream(stream FileData) returns (SaveFileStreamResponse) {}
	rpc ReadFileStream(ReadFileStreamRequest) returns (stream FileData) {}
}

message File {
	string        name = 1;
	int64         create_utc_nano = 2;
	int64         id = 3;
	int64         user_id = 4;
	string        error = 5;
	int64         size = 6;
	bool          private = 7;
	string        mime = 8;
}

message FileChunk {
	bytes         chunk = 1;
}

message FileData {
	oneof data {
		File        file = 1;
		bytes       chunk = 2;
	};
}

message SaveFileStreamResponse {
}

message ReadFileStreamRequest {
	int64    id = 1;
	string   name = 2;
	bool     public = 3;
}

message ReadBatchFilesRequest {
	int64    user_id = 1;
	repeated int64  ids = 2;
}

message ReadBatchFilesResponse {
	map<int64, File>   files = 1;
}

message ReadFileRequest {
	int64    id = 1;
	int64    user_id = 2;
}